@@ -1,11 +1,11 @@
 package com.back.domain.wiseSaying.repository;
 
 import com.back.domain.wiseSaying.entity.WiseSaying;
+import com.back.standard.dto.Page;
 import com.back.standard.dto.Pageable;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class WiseSayingRepository {
@@ -23,13 +23,16 @@ public class WiseSayingRepository {
         return wiseSaying;
     }
 
-    public List<WiseSaying> findforList(Pageable pageable) {
-        return wiseSayings
+    public Page<WiseSaying> findforList(Pageable pageable) {
+        int totalCount = wiseSayings.size();
+        List<WiseSaying> content = wiseSayings
                 .reversed()
                 .stream()
                 .skip(pageable.getSkipCount())
                 .limit(pageable.getPageSize())
-                .collect(Collectors.toList());
+                .toList();
+
+        return new Page<>(totalCount, pageable.getPageNo(), pageable.getPageSize(), content);
     }
 
     public int findIndexById(int id) {
@@ -52,34 +55,57 @@ public class WiseSayingRepository {
         wiseSayings.remove(wiseSaying);
     }
 
-    public List<WiseSaying> findforListByCotentContaining(String keyword,Pageable pageable) {
-        return wiseSayings
+    public Page<WiseSaying> findforListByCotentContaining(String keyword,Pageable pageable) {
+        List<WiseSaying> filtered = wiseSayings
                 .reversed()
                 .stream()
-                .filter(w->w.getContent().contains(keyword))
+                .filter(w-> w.getContent().contains(keyword))
+                .toList();
+
+        int totalCount = filtered.size();
+
+        List<WiseSaying> content = filtered
+                .stream()
                 .skip(pageable.getSkipCount())
                 .limit(pageable.getPageSize())
-                .collect(Collectors.toList());
+                .toList();
+
+        return new Page<>(totalCount, pageable.getPageNo(), pageable.getPageSize(), content);
     }
 
-    public List<WiseSaying> findforListByAuthorContaining(String keyword, Pageable pageable) {
-        return wiseSayings
-
+    public Page<WiseSaying> findforListByAuthorContaining(String keyword, Pageable pageable) {
+        List<WiseSaying> filtered = wiseSayings
                 .reversed()
                 .stream()
-                .filter(w->w.getAuthor().contains(keyword))
+                .filter(w-> w.getAuthor().contains(keyword))
+                .toList();
+
+        int totalCount = filtered.size();
+
+        List<WiseSaying> author = filtered
+                .stream()
                 .skip(pageable.getSkipCount())
                 .limit(pageable.getPageSize())
-                .collect(Collectors.toList());
+                .toList();
+
+        return new Page<>(totalCount, pageable.getPageNo(), pageable.getPageSize(), author);
     }
 
-    public List<WiseSaying> findforListByCotentContainingOrAuthorContaining(String keyword1, String keyword2,Pageable pageable) {
-        return wiseSayings
+    public Page<WiseSaying> findforListByCotentContainingOrAuthorContaining(String keyword1, String keyword2,Pageable pageable) {
+        List<WiseSaying> filtered = wiseSayings
                 .reversed()
                 .stream()
                 .filter(w-> w.getContent().contains(keyword1) || w.getAuthor().contains(keyword2))
+                .toList();
+
+        int totalCount = filtered.size();
+
+        List<WiseSaying> contain = filtered
+                .stream()
                 .skip(pageable.getSkipCount())
                 .limit(pageable.getPageSize())
-                .collect(Collectors.toList());
+                .toList();
+
+        return new Page<>(totalCount, pageable.getPageNo(), pageable.getPageSize(), contain);
     }
 }
